--- a/tp1/index.html
+++ b/tp1/index.html
@@ -4,38 +4,93 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>TP1</title>
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title></title>
+  <link rel="stylesheet" href="cv.css" />
+  </head>
+    <body> 
+      <table width="100%" border="1">
+		<tr>
+      <td>Ahlam HAMIDI</td>
+      <td>célébataire</td>
+		</tr>
+ <tr>
+			<td>Epinay sur seine, France</td>
+			<td>Permis B</td>
+		</tr>
+    <tr>
+			<td>012345678</td>
+      <td></td>
+		</tr>
+		<tr>
+      <td>ahlam.hamidi2023@gmail.com</td>
+      <td></td>
+    </tr>
+      </table>
+      <h1 class="titre"> Ingénieur de Réseaux et Télécommunications</h1>
+      <h1>Formations</h1>
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-  <!-- Place favicon.ico in the root directory -->
-
-  <style>
-    body {
-      background-color: #e9ebee;
-      font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-      font-size: 16px;
-      margin: 0 auto;
-      max-width: 800px;
-    }
-  </style>
-
-  <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-  <!--<link rel="stylesheet" href="style.css">-->
-  <!--<script src="main.js"></script>-->
-</head>
-
-<body>
-  <nav>
-    <a href="..">🏠 Index</a> / TP1
-  </nav>
-  <h1>TP 1</h1>
-  <!-- Add your site or application content here -->
-  <p>Hello world! hello world This is HTML5 Boilerplate.</p>
-  <img src="../galilee.png" alt="Logo Galilee" />
-
-  <h2><a href="experiences/index.html">Expériences</a></h2>
+      <table width="100%" border="1">
+      <tr>
+        <td>2022</td>
+        <td><a href="formation.html">Master Réseaux et Télécommunications, Alger </a></td>
+       </tr> 
+       <tr>
+        <td>2020</td>
+        <td>Licence Telecommunications, Alger</td>
+</tr>
+<tr>
+  <td>2017</td>
+  <td>Bac</td>
+</tr>
+</table>
+  <h1>Compétences</h1>
+  <table width="100%" border="1">
+    <tr>
+      <td>Développement</td>
+      <td>JAVA,HTML</td>
+    </tr>
+    <tr>
+      <td>Base de données</td>
+      <td>MySQL</td>
+    </tr>
+    <tr>
+      <td>Réseaux</td>
+      <td>IPV6,LAN,WIFI</td>
+    </tr>
+    <tr>
+      <td>Langues</td>
+      <td>Francais, Anglais, Arabe:langue maternelle</td>
+    </tr>
+  </table>    
+  <h1>Expériences</h1>
+  <table width="100%" border="1">
+    <tr>
+      <td>2022</td>
+      <td>Stage de fin d'études chez Algérie Télécom<img src="C:\Users\Ahlam\Documents\GitHub\aw3ir\tp1\Logo_Algérie_Télécom.svg.png" height="30"></td>
+    </tr>
+    <tr>
+      <td>2020</td>
+      <td>Stage chez Algérie Télécom<img src="C:\Users\Ahlam\Documents\GitHub\aw3ir\tp1\Logo_Algérie_Télécom.svg.png" height="30"></td>
+    </tr>
+    <tr>
+      <td>2017</td>
+      <td>Bac</td>
+    </tr>
+  </table>
+  <h1>Centre d'intérets</h1>
+  <table width="100%" border="1">
+    <tr>
+      <td>Sport</td>
+      <td>Running</td>
+    </tr>
+    <tr>
+      <td>Culture</td>
+      <td>Musée,Cinéma</td>
+    </tr>
+    <tr>
+      <td>Voyages</td>
+      <td>Italy</td>
+    </tr>
+  </table>
 </body>
-
 </html>
