--- a/tp1/index.html
+++ b/tp1/index.html
@@ -36,7 +36,7 @@
        </tr> 
        <tr>
         <td>2020</td>
-        <td>Licence Telecommunications, Alger</td>
+        <td><a href="formation2.html">Licence Telecommunications, Alger</a></td>
 </tr>
 <tr>
   <td>2017</td>
