--- a/tp1/Formation.html
+++ b/tp1/Formation.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="cv.css">
 </head>
 <body>
-	<a href="index.html">return vers la page d'acceuil</a>
+	<a href="index.html">retour vers la page d'acceuil</a>
 	<h1>Formations</h1>
 	<h1>2021/2022 Master 2 Reseaux et Telecommunications</h1>
 	c'est un master en Algérie.
