--- a/tp1/Formation2.html
+++ b/tp1/Formation2.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="cv.css">
 </head>
 <body>
-	<a href="index.html">return vers la page d'acceuil</a>
+	<a href="index.html">retour vers la page d'acceuil</a>
 	<h1>Formations</h1>
 	<h1>2020 Licence Telecommunications</h1>
 	c'est un Licence en Algérie.
